batch-66/Installation.txt
Ubuntu/Linux mint/zorion
---------------------------
# sudo apt-get install python
# sudo apt-get install python3
# sudo apt-get install ipython
# sudo apt-get install ipython3
# sudo apt-get install bpython
# sudo apt-get install bpython3
# sudo apt-get install jupyter
or
# sudo pip install jupyter

Redhat/Fedora/Centos
---------------------
# yum install python
# yum install python3
# yum install ipython
# yum install ipython3
# yum install bpython
# yum install bpython3
# pip install jupyter

windows
---------
https://www.anaconda.com/download/#windows

IDE
---
https://stackoverflow.com/questions/81584/what-ide-to-use-for-python





khyaathi@khyaathipython:~/Documents/git_repos/python-batches$ python --version
Python 2.7.12+
khyaathi@khyaathipython:~/Documents/git_repos/python-batches$ python3 --version
Python 3.5.2+
khyaathi@khyaathipython:~/Documents/git_repos/python-batches$ python
Python 2.7.12+ (default, Sep 17 2016, 12:08:02) 
[GCC 6.2.0 20160914] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> print "hello world"
hello world
>>> 
>>> quit()
khyaathi@khyaathipython:~/Documents/git_repos/python-batches$ python3
Python 3.5.2+ (default, Sep 22 2016, 12:18:14) 
[GCC 6.2.0 20160927] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> print ("Hello world")
Hello world
>>> 
>>> print "hello world"
  File "<stdin>", line 1
    print "hello world"
                      ^
SyntaxError: Missing parentheses in call to 'print'
>>> quit()
khyaathi@khyaathipython:~/Documents/git_repos/python-batches$ 


khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ls
Installation.txt  myfirst.ipynb  opensource.txt
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ls -l
total 16
-rw-r--r-- 1 khyaathi khyaathi   22 Oct 23 19:30 first.py
-rw-r--r-- 1 khyaathi khyaathi 1601 Oct 23 19:06 Installation.txt
-rw-r--r-- 1 root     root      813 Oct 23 18:54 myfirst.ipynb
-rw-r--r-- 1 khyaathi khyaathi 1845 Oct 18 19:37 opensource.txt
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ python first.py
hello world!!
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ perl first.py
hello world!!khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ 
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ 
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ chmod +x first.py 
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ 
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ls -l
total 16
-rwxr-xr-x 1 khyaathi khyaathi   22 Oct 23 19:30 first.py
-rw-r--r-- 1 khyaathi khyaathi 1601 Oct 23 19:06 Installation.txt
-rw-r--r-- 1 root     root      813 Oct 23 18:54 myfirst.ipynb
-rw-r--r-- 1 khyaathi khyaathi 1845 Oct 18 19:37 opensource.txt
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ./first.py 
Error: no such file "hello world!!"
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ python --version
Python 2.7.12+
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ls
first.py  Installation.txt  myfirst.ipynb  opensource.txt
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ echo $PATH
/home/khyaathi/bin:/home/khyaathi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ which python
/usr/bin/python
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ./first.py 
hello world!!
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ which python3
/usr/bin/python3
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ./first.py 
  File "./first.py", line 2
    print "hello world!!"
                        ^
SyntaxError: Missing parentheses in call to 'print'
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ./first.py 
hello world!!
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ ./first.py 
hello world!!
khyaathi@khyaathipython:~/Documents/git_repos/python-batches/batch-66$ 


